--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
     width: 100%;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
+
+}
+
+.loginPageContainer {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,4 +63,44 @@
     font-size: 1.125rem;
     font-weight: 700;
     cursor: pointer;
+}
+
+.phoneInput {
+    background-color: transparent;
+}
+
+.inputStyle {
+    border: 5px solid #000;
+}
+
+
+/* otp inputs */
+.otp-input-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.otp-input-container input {
+    width: 78.54px;
+    height: 77.209px;
+    border: 1px solid #D0D3D4;
+    text-align: center;
+    font-size: 1.75rem;
+}
+
+/* a tag*/
+.otp-bottom-click {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.otp-bottom-click a {
+    color: #101920;
+    font-family: Helvetica;
+    font-size: 1rem;
+    font-weight: 300;
+    text-decoration-line: underline;
 }
